--- a/app/views/partial_comment_thread.scala.html
+++ b/app/views/partial_comment_thread.scala.html
@@ -21,8 +21,6 @@
 @(thread: CommentThread)
 
 @import utils.JodaDateUtil
-@import utils.TemplateHelper._
-@import utils.TemplateHelper.DiffRenderer._
 
 <div id="thread-@thread.id" data-state="@thread.state.toString().toLowerCase()"
      class="comment-thread-wrap @thread.state.toString().toLowerCase()
@@ -79,19 +77,5 @@
         }
     </ul>
 
-    <div class="write-comment-form"></div>
-
-    <p class="thread-actrow">
-        @if(utils.AccessControl.isAllowed(UserApp.currentUser(), thread.asResource(), Operation.UPDATE)){
-            @if(thread.state == CommentThread.ThreadState.OPEN) {
-            <button type="button" data-request-method="post" data-request-uri="@routes.CommentThreadApp.close(thread.id)" class="ybtn ybtn-default ybtn-small">@Messages("commentThread.close")</button>
-            } else {
-            <button type="button" data-request-method="post" data-request-uri="@routes.CommentThreadApp.open(thread.id)" class="ybtn ybtn-default ybtn-small">@Messages("commentThread.open")</button>
-            }
-        }
-
-        @if(utils.AccessControl.isProjectResourceCreatable(UserApp.currentUser(), thread.project, ResourceType.REVIEW_COMMENT)){
-        <button type="button" class="ybtn ybtn-info ybtn-small btn-thread" data-thread-id="@thread.id">@Messages("button.comment.open")</button>
-        }
-    </p>
+    @partial_comment_form_on_thread(thread)
 </div>
