--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -450,6 +450,12 @@ span.issue-label {
         height:100%;
         vertical-align:top;
     }
+
+    i {
+        width:100%; height:100%;
+        display:block; line-height:inherit;
+        text-align:center; color:#fff;
+    }
 }
 
 /** tab UI **/
