--- a/app/views/project/importing.scala.html
+++ b/app/views/project/importing.scala.html
@@ -51,18 +51,24 @@
           </dd>
           <dd>
             <label class="checkbox">
-              <input type="checkbox" id="useRepoAuth"> @Messages("project.import.auth.required")
+              <input type="checkbox" id="useRepoAuth" @if(newProjectForm.field("authId").value || newProjectForm.error("repoAuth") != null){checked}> @Messages("project.import.auth.required")
             </label>
 
-            <div id="repoAuth" class="repo-auth-wrap">
+            <div id="repoAuth" class="repo-auth-wrap" @if(newProjectForm.field("authId").value || newProjectForm.error("repoAuth") != null){ style="display:block;" }>
               <div class="row-fluid">
               <dl class="span6">
                 <dt>@Messages("project.import.auth.userid")</dt>
-                <dd><input type="text" name="authId" class="text" placeholder="@Messages("project.import.auth.userid.desc")"></dd>
+                <dd>
+                  <input type="text" name="authId" class="text"
+                         value="@newProjectForm.field("authId").value"
+                         placeholder="@Messages("project.import.auth.userid.desc")">
+                </dd>
               </dl>
               <dl class="span6">
                 <dt>@Messages("project.import.auth.userpw")</dt>
-                <dd><input type="password" name="authPw" class="text"></dd>
+                <dd>
+                  <input type="password" name="authPw" class="text">
+                </dd>
               </dl>
               </div>
             </div>
