IssueLabel: Refactored editor
- Separate LabelEditor into independent page.
- Fix label id attr `data-labelId` to `data-label-id` on relative code.
- Fix label category on view to fit new model.

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -238,3 +238,15 @@ input[type=number]::-webkit-outer-spin-button {
     display:inline-block !important;
     vertical-align: middle !important;
 }
+
+input.dimgray { color:dimgray; }
+input.dimgray::-webkit-input-placeholder { color:dimgray; opacity:0.8; }
+input.dimgray:-moz-placeholder           { color:dimgray; opacity:0.8; } /* Firefox 18- */
+input.dimgray::-moz-placeholder          { color:dimgray; opacity:0.8; } /* Firefox 19+ */
+input.dimgray:-ms-input-placeholder      { color:dimgray; opacity:0.8; }
+
+input.white { color:#fff; }
+input.white::-webkit-input-placeholder   { color:#fff; opacity:0.8; }
+input.white:-moz-placeholder             { color:#fff; opacity:0.8; } /* Firefox 18- */
+input.white::-moz-placeholder            { color:#fff; opacity:0.8; } /* Firefox 19+ */
+input.white:-ms-input-placeholder        { color:#fff; opacity:0.8; }
