--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -158,11 +158,26 @@
                         <dt>
                             @Messages("label")
                             @if(isProjectResourceCreatable(UserApp.currentUser, project, ResourceType.ISSUE_LABEL)){
-                            <button id="manage-label-link" type="button" class="ybtn ybtn-default ybtn-mini pull-right"><i class="yobicon-cog"></i></button>
+                            <a href="@routes.IssueLabelApp.labels(project.owner, project.name)" target="_blank"
+                               class="ybtn ybtn-default ybtn-mini pull-right"><i class="yobicon-cog"></i></a>
                             }
                         </dt>
                         <dd>
-                            <fieldset class="labels issue-form-labels"></fieldset>
+                            <select id="issueLabels" multiple="multiple" data-toggle="select2" data-format="issuelabel"
+                                    data-dropdown-css-class="issue-labels" data-container-css-class="issue-labels" style="border:1px solid #ddd;">
+                                <option></option>
+                                @IssueLabel.findByProject(project).groupBy(_.category).map {
+                                    case (category, labels) => {
+                                        <optgroup label="@category.name">
+                                        @labels.map { label =>
+                                            <option value="@label.id" data-category="@category.id" @if(issue.labels.contains(label)){ selected }>
+                                        @label.name
+                                        </option>
+                                        }
+                                        </optgroup>
+                                    }
+                                }
+                            </select>
                         </dd>
                     </dl>
                 </div>
@@ -172,27 +187,17 @@
         </div>
     </div>
 </div>
+
 @common.markdown(project)
-@common.issueLabel()
 @common.select2()
 @common.calendar()
+
+<link rel="stylesheet" type="text/css" media="screen" href="@routes.IssueLabelApp.labelStyles(project.owner, project.name)">
 <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.css")">
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.caret.min.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.js")"></script>
 <script type="text/javascript">
-    $(document).ready(function(){
-        // yobi.Label
-        yobi.Label.init({
-            "sURLLabels": "@routes.IssueLabelApp.labels(project.owner, project.name)",
-            "sURLPost"  : "@routes.IssueLabelApp.newLabel(project.owner, project.name)",
-            "fOnLoad"   : function(){
-                var htActive = {@for(label <- issue.labels) { "@label.id":"@label.color", }"":""};
-                for(var sKey in htActive){
-                    yobi.Label.setActiveLabel(sKey, htActive[sKey]);
-                }
-            }
-        });
-
+    $(function(){
         // yobi.issue.Write
         $yobi.loadModule("issue.Write", {
             "sMode"             : "edit",
