--- a/app/views/project/partial_dashboard_issuesbylabel.scala.html
+++ b/app/views/project/partial_dashboard_issuesbylabel.scala.html
@@ -34,7 +34,7 @@
                 <div class="row-fluid">
                     <div class="span10">
                         <a href="@makeIssuesLink(project, scala.collection.immutable.Map("labelIds"->label.id.toString))">
-                            <span class="issue-label list-label active" data-labelId="@label.id">
+                            <span class="issue-label list-label active" data-label-id="@label.id">
                             @label.name
                             </span>
                         </a>
