--- a/app/views/user/partial_issues.scala.html
+++ b/app/views/user/partial_issues.scala.html
@@ -26,7 +26,7 @@
 @urlToList = {@routes.IssueApp.issues(project.owner, project.name, "OPEN", "html", 1)}
 
 @makeLabelLink(project:Project, label:IssueLabel) = {
-    <a href="@urlToList&labelIds=@label.id" class="label issue-label list-label" data-labelId="@label.id" data-color="@label.color" style="background:@label.color">@label.name</a>
+    <a href="@urlToList&labelIds=@label.id" class="label issue-label list-label" data-label-id="@label.id" data-color="@label.color" style="background:@label.color">@label.name</a>
 }
 @defining(User.findByLoginId(issue.authorLoginId)){ user =>
 <li class="post-item " id="issue-item-@issue.id">
