--- a/app/views/issue/list.scala.html
+++ b/app/views/issue/list.scala.html
@@ -23,43 +23,25 @@ models.support.SearchCondition, project:Project)
 
 @projectLayout(Messages(title), project, utils.MenuType.ISSUE){
 @projectMenu(project, utils.MenuType.ISSUE, "main-menu-only")
+<link rel="stylesheet" href="@routes.IssueLabelApp.labelStyles(project.owner, project.name)" type="text/css" />
 <div class="page-wrap-outer">
-    <div class="project-page-wrap">
-    	@views.html.issue.partial_search(title, currentPage, param, project)
-    </div>
+  <div class="project-page-wrap">
+    @partial_list_wrap(title, currentPage, param, project)
+  </div>
 </div>
+
 @common.select2()
 @common.calendar()
+
 <script type="text/javascript">
-    $(document).ready(function(){
-        var htPjaxOptions = {
-            "fragment": "div[pjax-container]",
-            "timeout" : 3000
-        };
+  $(function(){
+    // issue.List
+    $yobi.loadModule("issue.List");
 
-        if($.support.pjax) {
-            $.pjax.defaults.maxCacheLength = 0;
-        }
-
-        // on click pagination
-        $(document).on("click", "a[pjax-page]", function(weEvt) {
-            $.pjax.click(weEvt, "div[pjax-container]", htPjaxOptions);
-        });
-
-        // on submit search form
-        $(document).on("submit", "form[name='search']", function(weEvt) {
-            $.pjax.submit(weEvt, "div[pjax-container]", htPjaxOptions);
-        });
-
-        // show spinners
-        $(document).on({
-            "pjax:send": function(){
-                yobi.ui.Spinner.show();
-            },
-            "pjax:complete": function(){
-                yobi.ui.Spinner.hide();
-            }
-        });
+    // ShortcutKey
+    yobi.ShortcutKey.setKeymapLink({
+      "N": "@routes.IssueApp.newIssueForm(project.owner, project.name)"
     });
+  });
 </script>
 }
