--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -257,9 +257,9 @@
                                         <option></option>
                                         @IssueLabel.findByProject(project).groupBy(_.category).map {
                                             case (category, labels) => {
-                                                <optgroup label="@category">
+                                                <optgroup label="@category.name">
                                                 @labels.map { label =>
-                                                    <option value="@label.id" data-category="@category" @if(issue.labels.contains(label)){ selected }>
+                                                    <option value="@label.id" data-category="@category.id" @if(issue.labels.contains(label)){ selected }>
                                                 @label.name
                                                 </option>
                                                 }
@@ -269,7 +269,7 @@
                                     </select>
                                 } else {
                                     @for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {
-                                        <a href='@routes.IssueApp.issues(project.owner, project.name, issue.state.state(), "html", 1)&labelIds=@label.id' class="label issue-label active static" data-labelId="@label.id" data-color="@label.color" style="background:@label.color">@label.name</a>
+                                        <a href='@routes.IssueApp.issues(project.owner, project.name, issue.state.state(), "html", 1)&labelIds=@label.id' class="label issue-label active static" data-label-id="@label.id" data-color="@label.color" style="background:@label.color">@label.name</a>
                                     }
                                 }
                             </dd>
