add email login feature

--- a/app/views/common/loginDialog.scala.html
+++ b/app/views/common/loginDialog.scala.html
@@ -28,10 +28,10 @@
     <form action="@routes.UserApp.login()" method="post" class="frm-wrap login-form-wrap">
       <dl>
         <dt>
-          <label for="loginIdD">@Messages("user.loginId")</label>
+          <label for="loginIdOrEmailD">@Messages("user.login.key")</label>
         </dt>
         <dd>
-          <input id="loginIdD" name="loginId" type="text" class="text email" autocomplete="off">
+          <input id="loginIdOrEmailD" name="loginIdOrEmail" type="text" class="text email" autocomplete="off">
         </dd>
 
         <dt>
