--- a/app/views/issue/list.scala.html
+++ b/app/views/issue/list.scala.html
@@ -29,6 +29,7 @@ models.support.SearchCondition, project:Project)
     </div>
 </div>
 @common.select2()
+@common.calendar()
 <script type="text/javascript">
     $(document).ready(function(){
         var htPjaxOptions = {
