--- a/app/views/issue/my_partial_list.scala.html
+++ b/app/views/issue/my_partial_list.scala.html
@@ -32,7 +32,7 @@
 @for(issue <- issueList){
 @defining(User.findByLoginId(issue.authorLoginId)){ user =>
     <li class="post-item" id="issue-item-@issue.id">
-        <div class="span9">
+        <div class="span10">
             <a href="@routes.UserApp.userInfo(user.loginId)" class="avatar-wrap mlarge" data-toggle="tooltip" data-placement="top" title="@user.loginId">
                 @if(user.avatarUrl == UserApp.DEFAULT_AVATAR_URL){
                     <img src="@urlToPicture(user.email, 32)">
@@ -62,6 +62,14 @@
                     @agoOrDateString(issue.createdDate)
                 </span>
 
+                @if(issue.milestone != null && issue.project != null && issue.project.menuSetting != null && issue.project.menuSetting.milestone) {
+                <span class="infos-item mileston-tag">
+                    <a href="@routes.MilestoneApp.milestone(issue.project.owner, issue.project.name, issue.milestone.id)" data-toggle="tooltip" data-placement="top" title="@Messages("milestone")">
+                        @issue.milestone.title
+                    </a>
+                </span>
+                }
+
                 @if(issue.comments.size()>0 || issue.voters.size()>0) {
                 <span class="infos-item item-count-groups">
                     @if(issue.comments.size()>0){
@@ -78,7 +86,7 @@
                 }
             </div>
         </div>
-        <div class="span3">
+        <div class="span2">
             <div class="mt5 pull-right">
                 @if(issue.assigneeName != null) {
                     <a href="@routes.UserApp.userInfo(issue.assignee.user.loginId)" class="avatar-wrap assinee" data-toggle="tooltip" data-placement="top" title="@Messages("issue.assignee"): @issue.assigneeName">
@@ -88,15 +96,16 @@
                    <div class="empty-avatar-wrap">&nbsp;</div>
                 }
             </div>
-            <div class="pull-right">
-                @if(issue.milestone != null && issue.project != null && issue.project.menuSetting != null && issue.project.menuSetting.milestone) {
-                <div class="mileston-tag">
-                    <a href="@routes.MilestoneApp.milestone(issue.project.owner, issue.project.name, issue.milestone.id)" data-toggle="tooltip" data-placement="top" title="@Messages("milestone")">
-                    @issue.milestone.title
-                    </a>
-                </div>
+            @if(issue.dueDate != null) {
+            <div class="mr20 mt10 pull-right @if(issue.isOverDueDate) {overdue}" data-toggle="tooltip" data-placement="top" title="@issue.getDueDateString">
+                <i class="yobicon-clock2"></i> 
+                @if(issue.isOverDueDate) {
+                    @Messages("issue.dueDate.overdue")
+                } else {
+                    @issue.until
                 }
             </div>
+            }
         </div>
     </li>
 }
