--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -144,6 +144,16 @@
                     </dl>
                     }
 
+                    <dl class="issue-option">
+                        <dt>@Messages("issue.dueDate")</dt>
+                        <dd>
+                            <div class="search search-bar">
+                                <input type="text" id="issueDueDate" data-toggle="calendar" name="dueDate" class="textbox full" value="@issue.getDueDateString">
+                                <button type="button" class="search-btn"><i class="yobicon-calendar2"></i></button>
+                            </div>
+                        </dd>
+                    </dl>
+
                     <dl id="labels" class="issue-option">
                         <dt>
                             @Messages("label")
@@ -165,6 +175,7 @@
 @common.markdown(project)
 @common.issueLabel()
 @common.select2()
+@common.calendar()
 <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.css")">
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.caret.min.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.js")"></script>
