--- a/app/views/issue/partial_search.scala.html
+++ b/app/views/issue/partial_search.scala.html
@@ -177,6 +177,14 @@
                         </dd>
                     </dl>
                     }
+
+                    <dl class="issue-option">
+                        <dt>@Messages("issue.dueDate")</dt>
+                        <dd class="search search-bar">
+                            <input type="text" id="issueDueDate" data-toggle="calendar" name="dueDate" class="textbox full" value="@param.getDueDateString">
+                            <button type="button" class="search-btn"><i class="yobicon-calendar2"></i></button>
+                        </dd>
+                    </dl>
                 </div>
 
                 <hr>
@@ -216,6 +224,7 @@
 
                 @if(currentPage.getList.size() > 1){
                 <div class="filters pull-right">
+                    @makeFilterLink("dueDate", param.orderBy, param.orderDir, Messages("common.order.dueDate"))
                     @makeFilterLink("updatedDate", param.orderBy, param.orderDir, Messages("common.order.updatedDate"))
                     @makeFilterLink("createdDate", param.orderBy, param.orderDir, Messages("common.order.date"))
                     @makeFilterLink("numOfComments", param.orderBy, param.orderDir, Messages("common.order.comments"))
@@ -243,7 +252,7 @@
         <script type="text/javascript">
             $(document).ready(function(){
                 // Label
-				        yobi.Label.init({
+                yobi.Label.init({
                     "bRefresh"     : true,
                     "sURLLabels"   : "@routes.IssueLabelApp.labels(project.owner, project.name)",
                     "sURLPost"     : "@routes.IssueLabelApp.newLabel(project.owner, project.name)",
@@ -252,12 +261,13 @@
 
                 // issue.List
                 $yobi.loadModule("issue.List", {
-                    "welSearchOrder": $("a[orderBy]"),
-                    "welSearchState": $("a[state]"),
-                    "welSearchForm" : $("form[name='search']"),
-                    "welFilter"     : $("a[pjax-filter]"),
-                    "elPagination"  : $("#pagination"),
-                    "nTotalPages" : @currentPage.getTotalPageCount
+                    "welSearchOrder"  : $("a[orderBy]"),
+                    "welSearchState"  : $("a[state]"),
+                    "welSearchForm"   : $("form[name='search']"),
+                    "welFilter"       : $("a[pjax-filter]"),
+                    "elPagination"    : $("#pagination"),
+                    "nTotalPages"     : @currentPage.getTotalPageCount,
+                    "welIssueDueDate" : $("#issueDueDate")
                 });
 
                 // ShortcutKey
